test/release/examples/spec/Modules/conflict1.good
conflict1.chpl:2: error: symbol x is multiply defined
conflict1.chpl:10: note: also defined here
